    <ScrollView
        android:layout_height="fill_parent"
        android:layout_width="match_parent"
        android:fillViewport="true"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="0dp" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:isScrollContainer="true"
        android:background="@drawable/coffee"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffc89a"
            android:textColorHint="#ffc89a"
            android:hint="@string/hintText"/>

        <TextView android:text="@string/toppings" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="30dp"
            android:textSize="30sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="#ffc89a"
            android:textAllCaps="true"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <CheckBox
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="#ffc89a"
            android:id="@+id/whippedcream"
            android:layout_marginRight="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/Whipped_cream"
            android:fontFamily="sans-serif-medium"
            android:textColor="#ffc89a"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="#ffc89a"
                android:id="@+id/choc0late"
                android:layout_marginRight="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/chocolate"
                android:fontFamily="sans-serif-medium"
                android:textColor="#ffc89a"/>
        </LinearLayout>


        <TextView android:text="@string/quantity" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="30dp"
            android:textSize="30sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="#ffc89a"
            android:textAllCaps="true"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:onClick="decrement"
                android:layout_marginRight="16dp"
                android:textSize="30sp"
                android:background="#ffc89a"
                android:fontFamily="sans-serif-medium"
                android:text="-"/>

            <TextView android:id="@+id/quantity_text_view"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_marginTop="5dp"
                android:textSize="40sp"
                android:textColor="#ffc89a"
                android:layout_marginRight="16dp"
                android:fontFamily="sans-serif-medium"
                android:layout_width="wrap_content"/>
            <Button
                android:id="@+id/incrementBtn"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:text="+"
                android:background="#ffc89a"
                android:fontFamily="sans-serif-medium"
                android:textSize="30sp"
                android:onClick="increment"/>

        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ordertext"
            android:layout_marginTop="30dp"
            android:textSize="25sp"
            android:background="#db9539"
            android:fontFamily="sans-serif-medium"
            android:onClick="submitOrder" />

    </LinearLayout>
    </ScrollView>
